Separate Edge detection from OptionWidget by creating new class, and preparing for next OpenCV operations by creating base class of all OpenCV widgets named AbstractOperationWidget

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,8 @@ add_executable(${PROJECT_NAME}
     src/gui/informationaboutimage.h
     src/gui/aboutwidget.h
     src/gui/optionwidget.h
+    src/gui/edgedetectionwidget.h
+    src/gui/abstractoperationwidget.h
     
     # Sources
     src/app/main.cpp
@@ -40,12 +42,15 @@ add_executable(${PROJECT_NAME}
     src/gui/informationaboutimage.cpp
     src/gui/aboutwidget.cpp
     src/gui/optionwidget.cpp
+    src/gui/edgedetectionwidget.cpp
+    src/gui/abstractoperationwidget.cpp
 
     # Forms
     src/gui/mainwindow.ui
     src/gui/informationaboutimage.ui
     src/gui/aboutwidget.ui
     src/gui/optionwidget.ui
+    src/gui/edgedetectionwidget.ui
 
     # Resources
     src/icons/icons.qrc
